<resources>
    <string name="app_name">UI练习</string>
    <string name="main_toolbar">toolbar 基本使用</string>
    <string name="custom">clock</string>
    <string name="menu_search">搜索</string>
    <string name="menu_notifications">通知</string>
    <string name="item02">item02</string>
    <string name="item01">item01</string>
    <string name="toolbar">toolbar</string>
    <string name="zhihu_toolbar">知乎app的toolbar</string>
    <string name="menu_setting">设置</string>
    <string name="menu_about">关于</string>
    <string name="home_page">首页</string>
    <string name="colorpalette">Color Palette</string>
    <string name="material_design">material design</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="haha">哈哈</string>
    <string name="hehe">呵呵</string>
    <string name="xixi">嘻嘻</string>
    <string name="action_edit">编辑</string>
    <string name="action_share">分享</string>
    <string name="action_more">更多</string>
    <string name="toolbar_1">toolbar与DrawerLayout结合使用1</string>
    <string name="toolbar_2">自定义菜单布局（使用PopupWindow）</string>
    <string name="toolbar_3">toolbar与DrawerLayout结合使用2</string>
    <string name="action_search">action_search</string>
    <string name="action_setting">action_setting</string>
    <string name="constraintlayout">ConstraintLayout</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="sideslip">侧滑菜单内容</string>
    <string name="tablayout">tablayout</string>
    <string name="tablayout_base_user">tablayout基本使用</string>
    <string name="constraintlayout_study">constraintlayout的学习</string>
    <string name="tablayout_custome_tab">tablayout自定义tab样式</string>
    <string name="display_icon">tab上显示图标</string>
    <string name="coordinatorlayout_study">CoordinatorLayout的学习</string>
    <string name="cardview_study">CardView的学习</string>
    <string name="fab_study">FloatingActionButton的学习</string>
    <string name="appbar_study">AppBarLayout的学习</string>
    <string name="til_study">TextInputLayout的学习</string>
    <string name="recycler_study">RecyclerView的学习</string>
    <string name="comprehensive_example">综合实例</string>
    <string name="toolbar_study">ToolBar的学习</string>
    <string name="tablayout_study">TabLayout的学习</string>
    <string name="snackbar_study">SnackBar的学习</string>
    <string name="large_text">2007年，参演喜剧《比尔·英格沃秀》，正式出道，此后陆续在《神探阿蒙》、
        《灵媒缉凶》等电视剧中出演角色[1]  。
        2008年，首次担纲女主角，在剧情片《扑克房》中饰演努力保护着自己和两个妹妹不受侵犯的女孩詹妮弗·劳伦斯。\n
2009年，与查理兹·塞隆、金·贝辛格合作主演情感电影《燃烧的平原》，饰演试图让父母重归于好的小镇女孩玛利亚娜，凭借该片获得第65届威尼斯国际电影节最佳新人奖[2]  。\n
2010年，主演悬疑电影《冬天的骨头》，在片中饰演踏上寻找父亲之路的17岁少女芮·多莉，凭借该片入围第83届奥斯卡金像奖最佳女主角奖和第68届金球奖剧情类最佳女主角奖[3]  。\n
2011年，与詹姆斯·麦卡沃伊、迈克尔·法斯宾德联袂主演科幻电影《X战警：第一战》，扮演拥有改变外貌能力的魔形女瑞雯[4]  。\n
2012年3月，搭档乔什·哈切森主演根据同名小说改编的冒险动作电影《饥饿游戏》，饰演自愿代替妹妹成为贡品的勇敢女孩凯特尼斯，凭借该片获得第21届MTV电影奖最佳女主角奖[13]  。12月，与布莱德利·库珀、罗伯特·德尼罗合作主演爱情喜剧电影《乌云背后的幸福线》，
        饰演性情古怪、我行我素的年轻寡妇蒂凡妮，凭借在片中的表现获得第85届奥斯卡金像奖最佳女主角奖和第70届金球奖音乐喜剧类最佳女主角奖等多个奖项[5]  。\n
2013年11月，在动作电影《饥饿游戏2：星火燎原》中再次扮演了坚强女孩凯特尼斯一角，凭借该片获得第23届MTV电影奖最佳女主角奖[14]  。12月，与克里斯蒂安·贝
 尔、艾米·亚当斯共同主演犯罪电影《美国骗局》，饰演职业骗子艾文的正牌妻子罗瑟琳，凭借该片获得第71届金球奖最佳女配角奖和第67届英国电影学院奖最佳女配角奖[6]  。2014年，在科幻系列电影《X战警：逆转未来》中再度饰演了魔形女瑞雯一角[15] </string>
    <string name="znf">詹妮弗·劳伦斯</string>
    <string-array name="menu_title">
        <item>立即欣赏</item>
        <item>我的乐库</item>
        <item>播放列表</item>
    </string-array>

    <string name="tip_drag">长按可以拖拽排序,点击删除</string>
    <string name="my_cahnnel">我的频道</string>
    <string name="other_channel">点击添加更多频道</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>

    <string name="load_more">正在加载更多...</string>
    <string name="load_finished">加载完成!</string>
    <string name="pull_to_refresh">下拉可以刷新</string>
    <string name="release_to_refresh">释放可以刷新数据</string>
    <string name="refreshing">正在刷新数据...</string>
    <string name="recyclerview_click_delete">RecyclerView的拖拽排序、点击删除</string>
    <string name="recyclerview_header_footer">RecyclerView添加Header和Footer</string>
    <string name="recyclerview_refresh">RecyclerView的下拉刷新和上拉加载更多</string>
    <string name="rv_add_remove_item">RecyclerView实现item的添加和删除</string>
    <string name="with_snackbar">结合Snackbar使用</string>
    <string name="with_appbarlayout">结合AppBarLayout使用</string>
    <string name="custom_behavior">自定义Behavior的最简单的例子</string>
    <string name="snackbar_ordinary">普通的SnackBark</string>
    <string name="snackbar_with_button">右侧带按钮的SnackBark</string>
    <string name="snackbar_bg_color">自定义SnackBark的背景字体颜色</string>
    <string name="title_activity_zfbhome_page_pull_up">ZFBHomePagePullUpActivity</string>
    <string name="action_settings">Settings</string>
    <string name="zhifubao_home_telescopic">仿支付宝首页头部伸缩效果</string>
    <string name="copy_airbnb_app_home_navigation">模仿Airbnb App的首页导航</string>
    <string name="instance3">TabLayout和CoordinatorLayout相结合的折叠控件</string>
    <string name="delete">删除</string>

</resources>
