<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gjj.gd.materialdesign_v7.toolbar.ToolBarActivity">

    <LinearLayout
        android:gravity="center"
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/toolbar_btn"
            style="@style/Button_style"
            android:text="@string/main_toolbar"
            />

        <TextView
            android:id="@+id/zhifu_btn"
            style="@style/Button_style"
            android:text="@string/zhihu_toolbar"/>

        <TextView
            android:id="@+id/toolbar_btn01"
            style="@style/Button_style"
            android:text="@string/toolbar_1"/>

        <TextView
            android:id="@+id/toolbar_btn02"
            style="@style/Button_style"
            android:text="@string/toolbar_2"/>

        <TextView
            android:id="@+id/toolbar_btn03"
            style="@style/Button_style"

            android:text="@string/toolbar_3"/>
    </LinearLayout>


</ScrollView>
