<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gjj.gd.materialdesign_v7.tablayout.AllTabLayoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tablayout_btn01"
            style="@style/Button_style"
            android:text="@string/tablayout_base_user"/>

        <TextView
            android:id="@+id/tablayout_btn02"
            style="@style/Button_style"
            android:text="@string/display_icon"/>

        <TextView
            android:id="@+id/tablayout_btn03"
            style="@style/Button_style"
            android:text="@string/tablayout_custome_tab"/>
    </LinearLayout>
</ScrollView>
