<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#96c1ec">

    <LinearLayout
        android:id="@+id/ll_item1"
        style="@style/Ll_Style">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_item1"/>

        <TextView
            style="@style/Popwindow_Style"
            android:text="@string/haha"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c9c2c2"/>
    <LinearLayout
        android:id="@+id/ll_item2"
        style="@style/Ll_Style">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_item2"/>

        <TextView
            style="@style/Popwindow_Style"
            android:text="@string/hehe"/>

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#c9c2c2"/>
    <LinearLayout
        android:id="@+id/ll_item3"
        style="@style/Ll_Style">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_item3"/>

        <TextView
            style="@style/Popwindow_Style"
            android:text="@string/xixi"/>

    </LinearLayout>




</LinearLayout>