<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.gjj.gd.materialdesign_v7.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toolbar"
                android:background="@color/color_43d28d"
                android:gravity="center"
                android:textSize="30sp"/>
            <Button
                android:id="@+id/toolbar_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_toolbar" />
            <Button
                android:id="@+id/zhifu_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zhihu_toolbar" />

        </LinearLayout>

    </ScrollView>


</LinearLayout>
